# hawkapi-mail

./: CHANGELOG.md  README.md  pyproject.toml
src/hawkapi_mail/: __init__.py  _backends.py  _deps.py  _mailer.py  _message.py  _outbox.py  _templates.py  _webhooks.py
tests/: test_backends.py  test_mailer.py  test_message.py  test_outbox.py  test_templates.py  test_webhooks.py
