[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawkapi-mail"
version = "0.1.0"
description = "Email plugin for HawkAPI — SMTP, SES, SendGrid, Mailgun, Resend, Jinja2, webhooks, persistent outbox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "HawkAPI Contributors", email = "hawkapi@users.noreply.github.com" },
]
keywords = ["hawkapi", "email", "mail", "smtp", "ses", "sendgrid", "mailgun", "resend", "jinja2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "hawkapi>=0.1.7",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
ses = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "boto3>=1.34",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://pypi.org/project/hawkapi-mail/"
Repository = "https://github.com/ashimov/hawkapi-mail"
Issues = "https://github.com/ashimov/hawkapi-mail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hawkapi_mail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
